--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,7 +37,7 @@ progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=1
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/icon_144x144="uid://c1b1psv76oqsl"
+progressive_web_app/icon_180x180="uid://bboq5u0sq4sxq"
+progressive_web_app/icon_512x512="uid://ck36k3qxu0va8"
+progressive_web_app/background_color=Color(0.795177, 0.335617, 0.317858, 1)
